Change to Collections.singletonList()